# lazy-static-core

./: Cargo.toml  README.md
src/: lazy_static_core.rs  lib.rs
tests/: test.rs
