[package]

name = "lazy_static_core"
version = "0.0.1"
authors = [ "Marvin Löbel <loebel.marvin@gmail.com>", "Philipp Oppermann <dev@phil-opp.com" ]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = "A macro for declaring lazily evaluated statics in Rust that doesn't depend on the standard library."

# These URLs point to more information about the repository
documentation = "https://github.com/phil-opp/lazy-static-core/doc/lazy_static/"
repository = "https://github.com/phil-opp/lazy-static-core"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["macro", "lazy", "static"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# licenses. Multiple licenses can be separated with a `/`
license = "MIT"

[lib]

name = "lazy_static_core"
